small changes to coures webpages

--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -63,17 +63,20 @@
 					<col width="200">
 					<col width="200">
 					<col width="100">
+					<col width="100">
 					<tr>
 						<th> Week </th>
 						<th> Date </th>
 						<th> Class Content </th>
-						<th> Links </th>
-						<th> Notes </th>						
+						<th> Supp. Content </th>
+						<th> Section Summaries </th>
+						<th> Khan Videos </th>						
 					</tr>
 					<tr>
 						<td> 1 </td>
 						<td> 11 Feb. </td>
 						<td> Introductions </td>
+						<td> </td>
 						<td> </td>
 						<td> </td>
 					</tr>
@@ -83,6 +86,12 @@
 						<td> 9.1, 9.2, 9.3, 9.4</td>
 						<td> </td>
 						<td> </td>
+						<td> 
+							<a href="https://youtu.be/TrcCbdWwCBc">Intro</a>  
+							<a href="https://youtu.be/2DRmfxkH_VI">3D graphs</a> 
+							<a href="https://youtu.be/E9bAwP7iK80">Traces</a> 
+							<a href="https://youtu.be/WsZj5Rb6do8">Contours</a> 
+					</td>
 					</tr>
 					<tr>
 						<td> </td>
@@ -90,67 +99,77 @@
 						<td> 9.5 </td>
 						<td> </td>
 						<td> </td>
+						<td> </td>
 					</tr>
 					<tr>
 						<td> 3 </td>
 						<td> 23 Feb. </td>
-						<td> 9.6 </td>
+						<td> 9.6, 9.7 </td>
+						<td> </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 25 Feb. </td>
-						<td> 9.7 </td>
+						<td> 9.8 </td>
+						<td> </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> 4 </td>
 						<td> 2 March </td>
-						<td> 9.8</td>
+						<td> 10.1, 10.2 </td>
+						<td> </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 4 March </td>
-						<td> 10.1 </td>
+						<td> 10.3 </td>
+						<td> </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> 5 </td>
 						<td> 9 March </td>
-						<td> 10.2 </td>
+						<td> 10.4 </td>
+						<td> </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 11 March </td>
-						<td> 10.3 </td>
+						<td> 10.5 </td>
+						<td> </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> 6 </td>
 						<td> 16 March </td>
-						<td> 10.4 </td>
+						<td> 10.6 </td>
+						<td> </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 18 March </td>
-						<td> 10.5 </td>
+						<td> 10.7, 10.8 </td>
+						<td> </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> 7 </td>
 						<td> 23 March </td>
-						<td> 10.6</td>
+						<td> 11.1, 11.2 </td>
+						<td> </td>
 						<td> </td>
 						<td> </td>
 					</tr>
@@ -160,24 +179,28 @@
 						<td> Spring Break </td>
 						<td> </td>
 						<td> </td>
+						<td> </td>
 					</tr>
 					<tr>
 						<td> 8 </td>
 						<td> 30 March </td>
-						<td> 10.7 </td>
+						<td> 11.3 , 11.5 </td>
+						<td> </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 1 April </td>
-						<td> 10.8 </td>
+						<td> 11.6 </td>
+						<td> </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> 9 </td>
 						<td> 6 April </td>
+						<td> 11.7 </td>
 						<td> </td>
 						<td> </td>
 						<td> </td>
@@ -185,69 +208,79 @@
 					<tr>
 						<td> </td>
 						<td> 8 April </td>
-						<td> 11.1 </td>
+						<td> 11.8 </td>
+						<td> </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> 10 </td>
 						<td> 13 April </td>
-						<td> 11.2 </td>
+						<td> 12.1 </td>
+						<td> </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 15 April </td>
-						<td> 11.3 </td>
+						<td> 12.2 </td>
+						<td> </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> 11 </td>
 						<td> 20 April </td>
-						<td> 11.4 </td>
+						<td> 12.3 </td>
+						<td> </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 22 April </td>
-						<td> 11.5 </td>
+						<td> 12.4 </td>
+						<td> </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> 12 </td>
 						<td> 27 April </td>
-						<td> 11.6 </td>
+						<td> 12.5, 12.6 </td>
+						<td> </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 29 April </td>
-						<td> 11.7 </td>
+						<td> 12.7 </td>
+						<td> </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> 13 </td>
 						<td> 4 May </td>
-						<td> 11.8 </td>
+						<td> 12.8 </td>
+						<td> </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 6 May </td>
-						<td> 11.9 </td>
+						<td> 12.9, 12.10 </td>
+						<td> </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> 14 </td>
 						<td> Finals </td>
+						<td> </td>
 						<td> </td>
 						<td> </td>
 						<td> </td>
