added many new links and learning section

--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
   <header>
     <nav>
       <a href="index.html">Home</a>
+      <a href="learning.html">Learning</a>
       <a href="teaching.html">Teaching</a>
-      <a href="projects.html">SET</a>
+      <a href="outreach.html">Outreach</a>
+      <a href="set.html">SET</a>
       <a href="cv.html">CV</a>
       <a href="hobbies.html">Hobbies</a>
-      <a href="outreach.html">Outreach</a>
+      <a href="links.html">Links</a>
     </nav>
   </header>
 
