--- a/links.html
+++ b/links.html
@@ -29,20 +29,41 @@
   </header>
 
   <main>
-    <h1>Outreach</h1>
-    <p>Two of my favorite groups to volunteer for are FEEPS and Math Circles. FEEPS is an amazing program offering college courses to women in prison. Math circles are all over the country and offer mathematical joy to middle schoolers.
+    <h1>A collection of wonderful links</h1>
+
+
+    <h2>Math Youtube Channels</h2>
     <ul>
       <li>
-        <a href="https://fepps.org/">FEPPS</a>
+        <a href="https://www.youtube.com/user/Vihart">Vi Hart</a>
+      </li>	
+      <li>
+        <a href="https://www.youtube.com/c/3blue1brown/videos">3Blue1Brown</a>
       </li>
       <li>
-        <a href="https://sites.math.washington.edu/~mathcircle/circle/">UW Math Circle</a>
+        <a href="https://www.youtube.com/user/numberphile">Numberphile</a>
       </li>
       <li>
-        <a href="https://mathforlove.com/julia-robinson-festival/">Julia Robinson Festival</a>
+        <a href="https://www.youtube.com/user/standupmaths">Matt Parker</a>
       </li>
     </ul>
-  </main>
+
+    <h2>Individual Math Video Gems</h2>
+    <ul>
+      <li>
+        <a href="https://www.youtube.com/watch?v=sKqt6e7EcCs">Turning a Sphere inside out</a>
+      </li> 
+      <li>
+        <a href="https://www.youtube.com/watch?v=JX3VmDgiFnY&list=FLTX7BCTX6SxcLLDbdLabaLg">Mobious Tranformations</a>
+      </li>
+    </ul>
+
+    <h2>Other Things I Like</h2>
+    <ul>
+      <li>
+        <a href="https://www.youtube.com/user/allonewordplease">Joseph's Rube Goldberg Machine</a>
+      </li> 
+    </ul>
 
   <footer>
     <p>© 2021 Lucas Van Meter</p>
