--- a/hobbies.html
+++ b/hobbies.html
@@ -18,14 +18,16 @@
   <header>
     <nav>
       <a href="index.html">Home</a>
+      <a href="learning.html">Learning</a>
       <a href="teaching.html">Teaching</a>
-      <a href="projects.html">SET</a>
+      <a href="outreach.html">Outreach</a>
+      <a href="set.html">SET</a>
       <a href="cv.html">CV</a>
       <a href="hobbies.html">Hobbies</a>
-      <a href="outreach.html">Outreach</a>
+      <a href="links.html">Links</a>
     </nav>
   </header>
-
+  
   <main>
     <h1>Hobbies</h1>
 
