--- a/teaching.html
+++ b/teaching.html
@@ -18,11 +18,13 @@
   <header>
     <nav>
       <a href="index.html">Home</a>
+      <a href="learning.html">Learning</a>
       <a href="teaching.html">Teaching</a>
-      <a href="projects.html">SET</a>
+      <a href="outreach.html">Outreach</a>
+      <a href="set.html">SET</a>
       <a href="cv.html">CV</a>
       <a href="hobbies.html">Hobbies</a>
-      <a href="outreach.html">Outreach</a>
+      <a href="links.html">Links</a>
     </nav>
   </header>
 
@@ -66,6 +68,19 @@
       <li>Combinatorial Game Theory (at MathILy-Er) </li>
     </ul>
   </main>
+
+  <h3>Teaching inspiration</h3>
+  <ul>
+      <li>
+        <a href="https://www.khanacademy.org/college-careers-more/learnstorm-growth-mindset-activities-us/growth-mindset-content-overview">Teaching growth mindset</a>
+      </li> 
+      <li>
+        <a href="https://www.evidencebasedteaching.org.au/high-impact-teaching-strategies/">High impact teaching strategies</a>
+      </li>
+       <li>
+        <a href="https://www.youtube.com/watch?v=-MTRxRO5SRA">Khan academy on mastery based learning</a>
+      </li>
+    </ul>
 
   <footer>
     <p>© 2021 Lucas Van Meter</p>
