--- a/hobbies.html
+++ b/hobbies.html
@@ -43,9 +43,17 @@
       </ul>
     </section>
 -->
+    <section id="computerscience">
+      <h3>Computer Science</h3>
+      <ul>
+        <li>
+          <a href="https://github.com/lucasvanmeter">Github</a>
+        </li>
+      </ul>
+    </section>
 
     <section id="games">
-      <h1>Games</h1>
+      <h3>Games</h3>
       <ul>
         <li>
           <a href="https://www.crcpress.com/The-Dots-and-Boxes-Game-Sophisticated-Childs-Play/Berlekamp/p/book/9781568811291">Dots and Boxes</a>
@@ -59,8 +67,8 @@
       </ul>
     </section>
 
-    <section id="Poi">
-    	<h1>Poi</h1>
+    <section id="poi">
+    	<h3>Poi</h3>
     	<ul>
         	<li>
           		<a href="https://playpoi.com/learn/guide-to-manifesting-poi-and-learning-your-first-moves/">Great learning series</a>
