--- a/links.html
+++ b/links.html
@@ -32,7 +32,7 @@
     <h1>A collection of wonderful links</h1>
 
 
-    <h2>Math Youtube Channels</h2>
+    <h3>Math Youtube Channels</h3>
     <ul>
       <li>
         <a href="https://www.youtube.com/user/Vihart">Vi Hart</a>
@@ -48,7 +48,7 @@
       </li>
     </ul>
 
-    <h2>Individual Math Video Gems</h2>
+    <h3>Individual Math Video Gems</h3>
     <ul>
       <li>
         <a href="https://www.youtube.com/watch?v=sKqt6e7EcCs">Turning a Sphere inside out</a>
@@ -58,7 +58,26 @@
       </li>
     </ul>
 
-    <h2>Other Things I Like</h2>
+    <h3>Other People I Like</h3>
+    <ul>
+      <li>
+        <a href="https://tscholl2.github.io/website/">Travis Scholl</a>
+      </li>
+      <li>
+        <a href="http://www.gabrieldorfsmanhopkins.com/">Gabriel Dorfsman-Hopkins</a>
+      </li> 
+      <li>
+        <a href="http://www.swarthmore.edu/NatSci/chsu2/">Catherine Hsu</a>
+      </li> 
+      <li>
+        <a href="https://grahamwgordon.github.io/">Graham Gordon</a>
+      </li>
+      <li>
+        <a href="https://sites.math.washington.edu/~ostroff/">Jonah Ostroff</a>
+      </li> 
+    </ul>
+
+    <h3>Other Things I Like</h3>
     <ul>
       <li>
         <a href="https://www.youtube.com/user/allonewordplease">Joseph's Rube Goldberg Machine</a>
