--- a/teaching.html
+++ b/teaching.html
@@ -50,7 +50,8 @@
       </li>
     </ul>
 
-    <p>In the past I have taught:</p>
+    <details>
+    <summary>Courses I've taught in the past</summary>
     <ul>
       <li>Calculus I (at Swarthmore) </li>
       <li>Discrete Math (at L&C) </li>
@@ -67,7 +68,7 @@
       <li>Mathematics of Social Choice (at MathILy-Er) </li>
       <li>Combinatorial Game Theory (at MathILy-Er) </li>
     </ul>
-  </main>
+    </details>
 
   <h3>Teaching inspiration</h3>
   <ul>
@@ -81,6 +82,8 @@
         <a href="https://www.youtube.com/watch?v=-MTRxRO5SRA">Khan academy on mastery based learning</a>
       </li>
     </ul>
+
+  </main>
 
   <footer>
     <p>© 2021 Lucas Van Meter</p>
