--- a/links.html
+++ b/links.html
@@ -80,8 +80,24 @@
     <h3>Other Things I Like</h3>
     <ul>
       <li>
-        <a href="https://www.youtube.com/user/allonewordplease">Joseph's Rube Goldberg Machine</a>
+        <a href="https://ncase.me/">Nicky Case</a>
       </li> 
+      <li>
+        <a href="https://www.youtube.com/user/allonewordplease">Joseph's Rube Goldberg Machines</a>
+      </li> 
+    </ul>
+
+    <h3>Math, equity, and social justice</h3>
+    <ul>
+      <li>
+        <a href="https://mggg.org/">Metric Geometry and Gerrymandering Group</a>
+      </li>
+      <li>
+        Imposter syndrome
+      </li>
+      <li>
+        Steroetype threat
+      </li>
     </ul>
 
   <footer>
