--- a/teaching.html
+++ b/teaching.html
@@ -81,6 +81,15 @@
        <li>
         <a href="https://www.youtube.com/watch?v=-MTRxRO5SRA">Khan academy on mastery based learning</a>
       </li>
+      <li>
+        Master based grading
+      </li>
+      <li>
+        Contract grading
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=BeTRp73gtp4">A video about grading that will change the way you think of grading</a>
+      </li>
     </ul>
 
   </main>
