added google analytics

--- a/learning.html
+++ b/learning.html
@@ -11,6 +11,16 @@
   <link rel="stylesheet" href="vendor/normalize.min.css">
   <!-- Milligram CSS minified -->
   <link rel="stylesheet" href="vendor/milligram.min.css">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QG91YQKNTS"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-QG91YQKNTS');
+</script>
 </head>
 
 <body>
