added lots of links and fixed set page

--- a/classes/math3/index.html
+++ b/classes/math3/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Math 15 Course Webpage</title>
+  <title>Mathematical Thinking Course Webpage</title>
   <link rel="stylesheet" href="style.css">
   <!-- Google Fonts -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,300italic,700,700italic">
@@ -23,7 +23,7 @@
 
  	 <main>
 
-	    <h1>Math 34 Course Webpage</h1>
+	    <h1>Mathematical Thinking Course Webpage</h1>
 
 	<div id="container">
 		<div id="col1">
@@ -31,8 +31,6 @@
   			<ul>
   				<li> <a href="">Syllabus</a></p>
   				<li> <a href="https://moodle.swarthmore.edu/">Moodle</a></p>
-  				<li> <a href="https://activecalculus.org/vector/frontmatter.html">Book</a></p>
-  				<li> <a href="https://webwork.swarthmore.edu/webwork2/">Webwork</a></p>
   				<li> <a href="">Pirates Schedule</a></p>
   				<li> <a href="https://www.gradescope.com/">Gradescope</a></p>
   			</ul>
@@ -51,7 +49,7 @@
 			<section id="welcome">
 			    <h2>Welcome!</h2>
 			    <ul>
-				    <li>Welcome to Multivariable Calculus! </li>
+				    <li>Welcome to Mathematical Thinking! </li>
 			    </ul>
 	    	</section>
 
@@ -73,7 +71,7 @@
 					<tr>
 						<td> 1 </td>
 						<td> 11 Feb. </td>
-						<td> </td>
+						<td> Introductions </td>
 						<td> </td>
 						<td> </td>
 					</tr>
@@ -157,7 +155,7 @@
 					<tr>
 						<td> </td>
 						<td> 25 March </td>
-						<td> </td>
+						<td> Spring break </td>
 						<td> </td>
 						<td> </td>
 					</tr>
@@ -227,21 +225,21 @@
 					<tr>
 						<td> </td>
 						<td> 29 April </td>
-						<td> </td>
+						<td> Student projects </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> 13 </td>
 						<td> 4 May </td>
-						<td> </td>
+						<td> Student projects </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 6 May </td>
-						<td> </td>
+						<td> Student projects </td>
 						<td> </td>
 						<td> </td>
 					</tr>
