--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   <link rel="stylesheet" href="vendor/milligram.min.css">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-QG91YQKNTS"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3JHZWLS2P3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-	  gtag('config', 'G-QG91YQKNTS');
-	</script>
+    gtag('config', 'G-3JHZWLS2P3');
+  </script>
 </head>
 
 <body>
@@ -43,18 +43,21 @@
       <h1>Lucas Van Meter</h1>
       <img alt="picture of Lucas Van Meter" src="img/lucas.jpg" style="width:30%;object-fit: cover;float:right;">
       <p>
-        I am a visiting assistant professor at Swarthmore College in the math & stats department. My interests include:
+        I am a visiting assistant professor at Swarthmore College in the math & stats department. This website is a place to find my own work and links to others work that I feel is important. 
+
+        My interests include:
       </p>
       <ul>
-        <li>Algebraic Geometry</li>
-        <li>Computer Vision</li>
-        <li>Teaching and Learning</li>
+      	<li>Teaching and learning</li>
+      	<li>Social justice (in math (and higher education (and the world)))</li>
+        <li>Algebraic geometry</li>
         <li>SET</li>
+        <li>Computer vision</li>
       </ul>
     </section>
 
     <section id="section-teaching">
-      <h1>Current Teaching</h1>
+      <h3>Current Teaching</h3>
       <ul>
         <li>
           <a href="https://lucasvanmeter.github.io/classes/math3/index.html">Math 3, Mathematical Thinking, Spring 2021</a>
@@ -66,7 +69,7 @@
     </section>
 
     <section id="section-publications">
-      <h1>Publications</h1>
+      <h3>Publications</h3>
       <ul>
         <li>
           <a href="https://arxiv.org/abs/1707.09332"><i>Two Hilbert Schemes in Computer Vision</i></a> (with M. Lieblich). <br> SIAM Journal on Applied Algebra and Geometry, May 2020
@@ -81,7 +84,7 @@
     </section>
 
     <section id="section-contact">
-      <h1>Contact</h1>
+      <h3>Contact</h3>
       <div>
         <span>&#128232;️</span>lvanmet1 (at) swarthmore (dot) edu
     </div>
