--- a/links.html
+++ b/links.html
@@ -13,13 +13,13 @@
   <link rel="stylesheet" href="vendor/milligram.min.css">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QG91YQKNTS"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3JHZWLS2P3"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-QG91YQKNTS');
+    gtag('config', 'G-3JHZWLS2P3');
   </script>
 
 </head>
@@ -85,7 +85,17 @@
       </li>
       <li>
         <a href="https://sites.math.washington.edu/~ostroff/">Jonah Ostroff</a>
-      </li> 
+      </li>
+    </ul>
+
+    <h3>Blogs</h3>
+    <ul>
+      <li>
+        <a href="https://opencalculus.wordpress.com/">Matt Boelkins</a>
+      </li>
+      <li>
+        <a href="https://mathbabe.org/">Cathy O'Neil</a>
+      </li>
     </ul>
 
     <h3>Other Things I Like</h3>
@@ -102,6 +112,9 @@
     <ul>
       <li>
         <a href="https://mggg.org/">Metric Geometry and Gerrymandering Group</a>
+      </li>
+      <li>
+        <a href="https://www.todos-math.org/">TODOS: Mathematics for ALL</a>
       </li>
       <li>
         Imposter syndrome
