--- a/teaching.html
+++ b/teaching.html
@@ -13,15 +13,14 @@
   <link rel="stylesheet" href="vendor/milligram.min.css">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QG91YQKNTS"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3JHZWLS2P3"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-QG91YQKNTS');
-  </script>
-</head>
+    gtag('config', 'G-3JHZWLS2P3');
+  </script></head>
 
 <body>
 
@@ -81,25 +80,49 @@
     </details>
 
   <h3>Teaching inspiration</h3>
-  <ul>
+    <ul>
       <li>
         <a href="https://www.khanacademy.org/college-careers-more/learnstorm-growth-mindset-activities-us/growth-mindset-content-overview">Teaching growth mindset</a>
       </li> 
       <li>
         <a href="https://www.evidencebasedteaching.org.au/high-impact-teaching-strategies/">High impact teaching strategies</a>
       </li>
+      <li>
+        <a href="https://www.maa.org/sites/default/files/InstructPracGuide_web.pdf">MAA instructional practices guide</a>
+      </li>
+      <li>
+        <a href="https://www.indiebound.org/book/9781119413042">The Courage to Teach</a>
+      </li>
+    </ul>
+
+  <h3>Mastery based grading</h3>
+    <ul>
+      <li>
+        <a href="https://www.tandfonline.com/doi/full/10.1080/10511970.2020.1778824">PRIMUS issue on mastery based grading</a>
+      </li>
        <li>
         <a href="https://www.youtube.com/watch?v=-MTRxRO5SRA">Khan academy on mastery based learning</a>
       </li>
       <li>
-        Master based grading
+        <a href="https://ryancordell.org/teaching/contract-grading/">Contract grading</a>
+      </li>
+    </ul>
+
+  <h3>Unrading</h3>
+    <ul>
+      <li>
+        <a href="https://www.youtube.com/watch?v=BeTRp73gtp4">A video that might change the way you think about grading</a>
       </li>
       <li>
-        Contract grading
+        <a href="https://www.chronicle.com/article/grades-can-hinder-learning-what-should-professors-use-instead/">Ungrading (paywall!)</a>
       </li>
+    </ul>
+
+    <h3>Math texts</h3>
+    <ul>
       <li>
-        <a href="https://www.youtube.com/watch?v=BeTRp73gtp4">A video about grading that will change the way you think of grading</a>
-      </li>
+        <a href="https://activecalculus.org/">Active Calculus</a>
+      </li>google 
     </ul>
 
   </main>
