--- a/outreach.html
+++ b/outreach.html
@@ -13,13 +13,13 @@
   <link rel="stylesheet" href="vendor/milligram.min.css">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QG91YQKNTS"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3JHZWLS2P3"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-QG91YQKNTS');
+    gtag('config', 'G-3JHZWLS2P3');
   </script>
 
 </head>
