--- a/set.html
+++ b/set.html
@@ -13,13 +13,13 @@
   <link rel="stylesheet" href="vendor/milligram.min.css">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QG91YQKNTS"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3JHZWLS2P3"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-QG91YQKNTS');
+    gtag('config', 'G-3JHZWLS2P3');
   </script>
 
 </head>
@@ -48,7 +48,7 @@
     
     <p>I am currently working on a project generalizing the card game SET. Below you can find links to various versions we have created and other material. </p>
 
-    <h2>Articles, Slides and Talks</h2>
+    <h3>Articles, Slides and Talks</h3>
 
 
     <p>We published an <a href="https://maa.tandfonline.com/doi/abs/10.1080/10724117.2020.1714377?journalCode=umho20#.Xvq1iZZlBH5">article in Math Horizons</a> about the geometry behind projective SET.
@@ -56,33 +56,33 @@
     <p>Here are some slides and a video for a talk <a href="http://www.swarthmore.edu/NatSci/chsu2/">Catherine Hsu</a> and I have given on this topic. </p>
 
     <ul>
-      <li> <a href="./set/set/normalsetslides.pdf">Slides</sub> </li>
-      <li> <a href="set/set/setslides.pdf">More advanced slides</a> </li>
+      <li> <a href="https://raw.githubusercontent.com/lucasvanmeter/set-project/master/set/normalsetslides.pdf">Slides</sub> </li>
+      <li> <a href="https://raw.githubusercontent.com/lucasvanmeter/set-project/master/set/setslides.pdf">More advanced slides</a> </li>
       <li> <a href="https://icerm.brown.edu/video_archive/?play=2063">Catherien Hsu's talk at ICERM</a> </li>
     </ul>
 
-    <h2>SET decks</h2>
+    <h3>SET decks</h3>
 
-    <p><a href="set/set/Instructions.pdf">Instruction</a> on how to play each version.</p>
+    <p><a href="https://raw.githubusercontent.com/lucasvanmeter/set-project/master/set/Instructions.pdf">Instructions</a> on how to play each version.</p>
 
-    <h3> Projective decks </h3>
+    <h4> Printable Projective decks </h4>
     <ul>
-      <li> <a href="set/set/dotset.pdf">Dot SET</a> </li>
-      <li> <a href="set/set/pokemonset.pdf">Pokemon SET</a> </li>
-      <li> <a href="set/set/fano.pdf">Fano SET</a> </li>
-      <li> <a href="set/set/projnormalset.pdf">Projectivized (normal) SET</a> </li>
-    </ul>
-	<h3> Non-abelian decks </h3>
-  <img alt="Wreath tiles" src="img/wreathtiles.jpeg" style="width:30%;object-fit: cover;float:center;">
-    <ul>
-      <li> <a href="set/set/s3.pdf">Symmetric group S<sub>3</sub></a> </li>
-      <li> <a href="set/set/s3s3.pdf">Symmetric group S<sub>3</sub> x S<sub>3</sub> </li>
-      <li> <a href="set/set/s4.pdf">Symmetric group S<sub>4</sub></a> </li>
-      <li> <a href="set/set/wreathset.pdf">Wreath product Z/2Z by S<sub>3</sub></a> </li>
+      <li> <a href="https://raw.githubusercontent.com/lucasvanmeter/set-project/master/set/dotset.pdf">Dot SET</a> </li>
+      <li> <a href="https://raw.githubusercontent.com/lucasvanmeter/set-project/master/set/pokemonset.pdf">Pokemon SET</a> </li>
+      <li> <a href="https://raw.githubusercontent.com/lucasvanmeter/set-project/master/set/fano.pdf">Fano SET</a> </li>
+      <li> <a href="https://raw.githubusercontent.com/lucasvanmeter/set-project/master/set/projnormalset.pdf">Projectivized (normal) SET</a> </li>
     </ul>
 
-    <h2>Online Versions</h2>
+	  <h4> Printable Non-abelian decks </h4>
+    <img alt="Wreath tiles" src="img/wreathtiles.jpeg" style="width:30%;object-fit: cover;float:center;">
+    <ul>
+      <li> <a href="https://raw.githubusercontent.com/lucasvanmeter/set-project/master/set/s3.pdf">Symmetric group S<sub>3</sub></a> </li>
+      <li> <a href="https://raw.githubusercontent.com/lucasvanmeter/set-project/master/set/s3s3.pdf">Symmetric group S<sub>3</sub> x S<sub>3</sub> </li>
+      <li> <a href="https://raw.githubusercontent.com/lucasvanmeter/set-project/master/set/s4.pdf">Symmetric group S<sub>4</sub></a> </li>
+      <li> <a href="https://raw.githubusercontent.com/lucasvanmeter/set-project/master/set/wreathset.pdf">Wreath product Z/2Z by S<sub>3</sub></a> </li>
+    </ul>
 
+    <h4>Online Versions</h4>
   	<p> The fantastic mathematician <a href="http://www.gabrieldorfsmanhopkins.com/index.html">Gabriel Dorfsman-Hopkin</a> made a version of S<sub>3</sub> SET and S<sub>4</sub> SET that you can play online!</p>
   	<ul>
       <li> <a href="http://www.gabrieldorfsmanhopkins.com/digital_fabrication/nonabelianSet.html">Online game</a> </li>
