--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -74,9 +74,9 @@
 						<th> Week </th>
 						<th> Date </th>
 						<th> Class Content </th>
+						<th> Daily Prep </th>
 						<th> Overview Video </th>
-						<th> Lucas' Hot Take </th>
-						<th> ? </th>						
+						<th> Lucas' Hot Take </th>						
 					</tr>
 					<tr>
 						<td> 1 </td>
@@ -97,7 +97,7 @@
 					<tr>
 						<td> </td>
 						<td> 18 Feb. </td>
-						<td> 9.5 </td>
+						<td> 9.5, 9.6 </td>
 						<td> </td>
 						<td> </td>
 						<td> </td>
@@ -105,7 +105,7 @@
 					<tr>
 						<td> 3 </td>
 						<td> 23 Feb. </td>
-						<td> 9.6, 9.7 </td>
+						<td> 9.7, 9.8 </td>
 						<td> </td>
 						<td> </td>
 						<td> </td>
@@ -113,7 +113,7 @@
 					<tr>
 						<td> </td>
 						<td> 25 Feb. </td>
-						<td> 9.8 </td>
+						<td> 10.1, 10.2 </td>
 						<td> </td>
 						<td> </td>
 						<td> </td>
@@ -121,7 +121,7 @@
 					<tr>
 						<td> 4 </td>
 						<td> 2 March </td>
-						<td> 10.1, 10.2 </td>
+						<td> 10.3, 10.4 </td>
 						<td> </td>
 						<td> </td>
 						<td> </td>
@@ -129,7 +129,7 @@
 					<tr>
 						<td> </td>
 						<td> 4 March </td>
-						<td> 10.3 </td>
+						<td> 10.4, 10.5 </td>
 						<td> </td>
 						<td> </td>
 						<td> </td>
@@ -137,22 +137,6 @@
 					<tr>
 						<td> 5 </td>
 						<td> 9 March </td>
-						<td> 10.4 </td>
-						<td> </td>
-						<td> </td>
-						<td> </td>
-					</tr>
-					<tr>
-						<td> </td>
-						<td> 11 March </td>
-						<td> 10.5 </td>
-						<td> </td>
-						<td> </td>
-						<td> </td>
-					</tr>
-					<tr>
-						<td> 6 </td>
-						<td> 16 March </td>
 						<td> 10.6 </td>
 						<td> </td>
 						<td> </td>
@@ -160,8 +144,24 @@
 					</tr>
 					<tr>
 						<td> </td>
+						<td> 11 March </td>
+						<td> 10.7 </td>
+						<td> </td>
+						<td> </td>
+						<td> </td>
+					</tr>
+					<tr>
+						<td> 6 </td>
+						<td> 16 March </td>
+						<td> 11.1, 11.2 </td>
+						<td> </td>
+						<td> </td>
+						<td> </td>
+					</tr>
+					<tr>
+						<td> </td>
 						<td> 18 March </td>
-						<td> 10.7, 10.8 </td>
+						<td> 11.3, 11.5 </td>
 						<td> </td>
 						<td> </td>
 						<td> </td>
@@ -169,7 +169,7 @@
 					<tr>
 						<td> 7 </td>
 						<td> 23 March </td>
-						<td> 11.1, 11.2 </td>
+						<td> 11.6 </td>
 						<td> </td>
 						<td> </td>
 						<td> </td>
@@ -185,22 +185,6 @@
 					<tr>
 						<td> 8 </td>
 						<td> 30 March </td>
-						<td> 11.3 , 11.5 </td>
-						<td> </td>
-						<td> </td>
-						<td> </td>
-					</tr>
-					<tr>
-						<td> </td>
-						<td> 1 April </td>
-						<td> 11.6 </td>
-						<td> </td>
-						<td> </td>
-						<td> </td>
-					</tr>
-					<tr>
-						<td> 9 </td>
-						<td> 6 April </td>
 						<td> 11.7 </td>
 						<td> </td>
 						<td> </td>
@@ -208,8 +192,24 @@
 					</tr>
 					<tr>
 						<td> </td>
-						<td> 8 April </td>
+						<td> 1 April </td>
 						<td> 11.8 </td>
+						<td> </td>
+						<td> </td>
+						<td> </td>
+					</tr>
+					<tr>
+						<td> 9 </td>
+						<td> 6 April </td>
+						<td> 11.9 </td>
+						<td> </td>
+						<td> </td>
+						<td> </td>
+					</tr>
+					<tr>
+						<td> </td>
+						<td> 8 April </td>
+						<td> 12.1 </td>
 						<td> </td>
 						<td> </td>
 						<td> </td>
@@ -217,7 +217,7 @@
 					<tr>
 						<td> 10 </td>
 						<td> 13 April </td>
-						<td> 12.1 </td>
+						<td> 12.2 </td>
 						<td> </td>
 						<td> </td>
 						<td> </td>
@@ -225,7 +225,7 @@
 					<tr>
 						<td> </td>
 						<td> 15 April </td>
-						<td> 12.2 </td>
+						<td> 12.3 </td>
 						<td> </td>
 						<td> </td>
 						<td> </td>
@@ -233,7 +233,7 @@
 					<tr>
 						<td> 11 </td>
 						<td> 20 April </td>
-						<td> 12.3 </td>
+						<td> 12.4 </td>
 						<td> </td>
 						<td> </td>
 						<td> </td>
@@ -241,7 +241,7 @@
 					<tr>
 						<td> </td>
 						<td> 22 April </td>
-						<td> 12.4 </td>
+						<td> 12.5, 12.6 </td>
 						<td> </td>
 						<td> </td>
 						<td> </td>
@@ -249,7 +249,7 @@
 					<tr>
 						<td> 12 </td>
 						<td> 27 April </td>
-						<td> 12.5, 12.6 </td>
+						<td> 12.7 </td>
 						<td> </td>
 						<td> </td>
 						<td> </td>
@@ -257,7 +257,7 @@
 					<tr>
 						<td> </td>
 						<td> 29 April </td>
-						<td> 12.7 </td>
+						<td> 12.8 </td>
 						<td> </td>
 						<td> </td>
 						<td> </td>
@@ -265,7 +265,7 @@
 					<tr>
 						<td> 13 </td>
 						<td> 4 May </td>
-						<td> 12.8 </td>
+						<td> 12.9 </td>
 						<td> </td>
 						<td> </td>
 						<td> </td>
@@ -273,7 +273,7 @@
 					<tr>
 						<td> </td>
 						<td> 6 May </td>
-						<td> 12.9, 12.10 </td>
+						<td> 12.10 </td>
 						<td> </td>
 						<td> </td>
 						<td> </td>
