lots of littel things

--- a/classes/math3/index.html
+++ b/classes/math3/index.html
@@ -65,7 +65,7 @@
 						<th> Week </th>
 						<th> Date </th>
 						<th> Class Content </th>
-						<th> Links </th>
+						<th> Daily prep </th>
 						<th> Notes </th>						
 					</tr>
 					<tr>
@@ -78,77 +78,77 @@
 					<tr>
 						<td> 2 </td>
 						<td> 16 Feb. </td>
-						<td> </td>
+						<td> Game theory </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 18 Feb. </td>
-						<td> </td>
+						<td> Game theory </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> 3 </td>
 						<td> 23 Feb. </td>
-						<td> </td>
+						<td> Topic 2 </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 25 Feb. </td>
-						<td> </td>
+						<td> Topic 2 </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> 4 </td>
 						<td> 2 March </td>
-						<td> </td>
+						<td> Topic 3 </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 4 March </td>
-						<td> </td>
+						<td> Topic 3 </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> 5 </td>
 						<td> 9 March </td>
-						<td> </td>
+						<td> Topic 4 </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 11 March </td>
-						<td> </td>
+						<td> Topic 4 </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> 6 </td>
 						<td> 16 March </td>
-						<td> </td>
+						<td> Topic 5 </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 18 March </td>
-						<td> </td>
+						<td> Topic 5 </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> 7 </td>
 						<td> 23 March </td>
-						<td> </td>
+						<td> Topic 6 </td>
 						<td> </td>
 						<td> </td>
 					</tr>
@@ -162,62 +162,62 @@
 					<tr>
 						<td> 8 </td>
 						<td> 30 March </td>
-						<td> </td>
+						<td> Topic 7 </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 1 April </td>
-						<td> </td>
+						<td> Topic 7 </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> 9 </td>
 						<td> 6 April </td>
-						<td> </td>
+						<td> Topic 8 </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 8 April </td>
-						<td> </td>
+						<td> Topic 8 </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> 10 </td>
 						<td> 13 April </td>
-						<td> </td>
+						<td> Topic 9 </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 15 April </td>
-						<td> </td>
+						<td> Topic 9 </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> 11 </td>
 						<td> 20 April </td>
-						<td> </td>
+						<td> Topic 10 </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 22 April </td>
-						<td> </td>
+						<td> Topic 10 </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> 12 </td>
-						<td> 27 April </td>
+						<td> Project presentations  </td>
 						<td> </td>
 						<td> </td>
 						<td> </td>
@@ -225,21 +225,21 @@
 					<tr>
 						<td> </td>
 						<td> 29 April </td>
-						<td> Student projects </td>
+						<td> Project presentations  </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> 13 </td>
 						<td> 4 May </td>
-						<td> Student projects </td>
+						<td> Project presentations  </td>
 						<td> </td>
 						<td> </td>
 					</tr>
 					<tr>
 						<td> </td>
 						<td> 6 May </td>
-						<td> Student projects </td>
+						<td> Project presentations </td>
 						<td> </td>
 						<td> </td>
 					</tr>
