--- a/learning.html
+++ b/learning.html
@@ -105,6 +105,12 @@
       <li>
         <a href="https://www.youtube.com/watch?v=AfoNnJ038zA&list=PL9bIjQJDwfGuXQHuS5Jkmum_CFILoCZX-&index=92">Video about how to read a math book</a> and <a href="https://www.youtube.com/watch?v=phNkgfZyXS8">an example of someone doing just that</a>
       </li>
+      <li>
+        <a href="https://www.elegantthemes.com/blog/business/smart-goals">SMART goals</a>
+      </li>
+      <li>
+        <a href="https://ctl.byu.edu/tip/concept-mapping">Concept maps</a>
+      </li>
     </ul>
 
     <h3>Misc</h3>
