lots of littel things

--- a/classes/math3/index.html
+++ b/classes/math3/index.html
@@ -217,8 +217,8 @@
 					</tr>
 					<tr>
 						<td> 12 </td>
-						<td> Project presentations  </td>
-						<td> </td>
+						<td> 27 April </td>
+						<td> Project presentations </td>
 						<td> </td>
 						<td> </td>
 					</tr>
