--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -29,8 +29,8 @@
 		<div id="col1">
 			<h3>Links</h3>
   			<ul>
-  				<li> <a href="">Syllabus</a> </li>
-  				<li> <a href="https://www.gradescope.com/">Jamboards</a> </li>
+  				<li> <a href="./syllabus.pdf">Syllabus</a> </li>
+  				<li> <a href="">Jamboards</a> </li>
   				<li> <a href="https://activecalculus.org/vector/frontmatter.html">Book</a> </li>
   				<li> <a href="https://webwork.swarthmore.edu/webwork2/">Webwork</a> </li>
   				<li> <a href="https://www.gradescope.com/">Gradescope</a> </li>
@@ -90,9 +90,14 @@
 						<td> 2 </td>
 						<td> 16 Feb. </td>
 						<td> 9.1, 9.2, 9.3, 9.4</td>
-						<td> </td>
-						<td> </td>
-						<td> </td>
+						<td> <a href="./dailyprep/34DP.02.16.21.pdf">Daily Prep</a> </td>
+						<td> 
+							<a href="https://youtu.be/QTUx6IFYiO8">9.1</a>, 
+							<a href="https://youtu.be/mzaOytS6dog">9.2</a>, 
+							<a href="https://youtu.be/buLmMA_Z3_k">9.3</a>, 
+							<a href="https://youtu.be/mdwqZS1I838">9.4</a> 
+						</td>
+						<td> Bonus problem: <a href="./bonusproblems/quaternions.pdf">Quaternions</a> </td>
 					</tr>
 					<tr>
 						<td> </td>
