updated course websites

--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -30,9 +30,8 @@
 			<h3>Links</h3>
   			<ul>
   				<li> <a href="./syllabus.pdf">Syllabus</a> </li>
-  				<li> <a href="">Jamboards</a> </li>
   				<li> <a href="https://activecalculus.org/vector/frontmatter.html">Book</a> </li>
-  				<li> <a href="https://webwork.swarthmore.edu/webwork2/">Webwork</a> </li>
+  				<li> <a href="https://webwork.swarthmore.edu/webwork2/VanMeter-M34-S21">Webwork</a> </li>
   				<li> <a href="https://www.gradescope.com/">Gradescope</a> </li>
   				<li> <a href="https://c3d.libretexts.org/CalcPlot3D/index.html">CalcPlot3D</a> </li>
   				<li> <a href="https://moodle.swarthmore.edu/">Moodle</a> </li>
@@ -54,10 +53,10 @@
 
 			    <h3>Week 1 assignments</h3>
 			    <ul>
-			    	<li>2/16 daily prep</li>
-				    <li>How to read a math book</li>
-				    <li>Group Work Expectations</li>
-				    <li>Make a flipgrid video</li>
+			    	<li> <a href="./dailyprep/34DP.02.16.21.pdf">2/16 daily prep</a> </li>
+				    <li> <a href="./resources/whyreadmath.pdf">How to read a math book</a> </li>
+				    <li> <a href="./resources/groupwork.pdf">Group Work</a> </li>
+				    <li> Make a flipgrid video (link on moodle) </li>
 			    </ul>
 	    	</section>
 
@@ -75,7 +74,7 @@
 						<th> Date </th>
 						<th> Class Content </th>
 						<th> Daily Prep </th>
-						<th> Overview Video </th>
+						<th> Videos </th>
 						<th> Lucas' Hot Take </th>						
 					</tr>
 					<tr>
@@ -97,7 +96,7 @@
 							<a href="https://youtu.be/buLmMA_Z3_k">9.3</a>, 
 							<a href="https://youtu.be/mdwqZS1I838">9.4</a> 
 						</td>
-						<td> Bonus problem: <a href="./bonusproblems/quaternions.pdf">Quaternions</a> </td>
+						<td> Bonus topic: <a href="./bonusproblems/quaternions.pdf">Quaternions</a> </td>
 					</tr>
 					<tr>
 						<td> </td>
