updates to course websites

--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -23,7 +23,7 @@
 
  	 <main>
 
-	    <h1>Math 34 Course Webpage</h1>
+	    <h1>Multivariable Calculus Course Webpage</h1>
 
 	<div id="container">
 		<div id="col1">
@@ -35,6 +35,7 @@
   				<li> <a href="https://www.gradescope.com/">Gradescope</a> </li>
   				<li> <a href="https://c3d.libretexts.org/CalcPlot3D/index.html">CalcPlot3D</a> </li>
   				<li> <a href="https://moodle.swarthmore.edu/">Moodle</a> </li>
+  				<li> <a href="./standards.pdf">Standards</a> </li>
   			</ul>
 
  			<h4>Contact Info</h4>
