updates to course websites

--- a/classes/math3/index.html
+++ b/classes/math3/index.html
@@ -29,10 +29,8 @@
 		<div id="col1">
 			<h3>Links</h3>
   			<ul>
-  				<li> <a href="">Syllabus</a></p>
-  				<li> <a href="https://moodle.swarthmore.edu/">Moodle</a></p>
-  				<li> <a href="">Pirates Schedule</a></p>
-  				<li> <a href="https://www.gradescope.com/">Gradescope</a></p>
+  				<li> <a href="./syllabus.pdf">Syllabus</a> </li>
+  				<li> <a href="https://moodle.swarthmore.edu/">Moodle</a> </li>
   			</ul>
 
  			<h4>Class Info</h4>
@@ -52,7 +50,7 @@
 				    <li>Welcome to Mathematical Thinking! </li>
 			    </ul>
 	    	</section>
-	    	
+
 			<section id="calendar">
 				<h2> Course calendar </h2>
 				<table class="calendar">
