updated course websites

--- a/classes/math3/index.html
+++ b/classes/math3/index.html
@@ -45,9 +45,12 @@
 
 		<div id="col2">
 			<section id="welcome">
-			    <h2>Welcome!</h2>
+			    <h2>Welcome</h2>
+			    <h3> Week 1 Resources </h3>
 			    <ul>
-				    <li>Welcome to Mathematical Thinking! </li>
+				    <li> <a href="./resources/groupwork.pdf">Group Work</a>  </li>
+				    <li> Make a flipgrid video (link on moodle) </li>
+				    <li> <a href="./resources/mathbio.pdf">Mathematical Biography</a> </li>
 			    </ul>
 	    	</section>
 
