updated course websites

--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -58,6 +58,7 @@
 			    	<li> <a href="./dailyprep/34DP.02.16.21.pdf">2/16 daily prep</a> </li>
 				    <li> <a href="./resources/whyreadmath.pdf">How to read a math book</a> </li>
 				    <li> <a href="./resources/groupwork.pdf">Group Work</a> </li>
+				    <li> Your first reflection is due 2/19 and it can just be your answers to the group work and reading a math book reflections </li>
 				    <li> Make a flipgrid video (link on moodle) </li>
 			    </ul>
 	    	</section>
