updated course websites

--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -29,14 +29,14 @@
 		<div id="col1">
 			<h3>Links</h3>
   			<ul>
-  				<li> <a href="./syllabus.pdf">Syllabus</a> </li>
-  				<li> <a href="https://activecalculus.org/vector/frontmatter.html">Book</a> </li>
+  				<li> <a href="./resources/syllabus.pdf">Syllabus</a> </li>
+  				<li> <a href="https://activecalculus.org/vector/frontmatter.html">Actice Calculus</a> </li>
   				<li> <a href="https://webwork.swarthmore.edu/webwork2/VanMeter-M34-S21">Webwork</a> </li>
   				<li> <a href="https://www.gradescope.com/">Gradescope</a> </li>
   				<li> <a href="./resources/reflections.pdf">Reflections</a> </li>
   				<li> <a href="https://c3d.libretexts.org/CalcPlot3D/index.html">CalcPlot3D</a> </li>
   				<li> <a href="https://moodle.swarthmore.edu/">Moodle</a> </li>
-  				<li> <a href="./standards.pdf">Standards</a> </li>
+  				<li> <a href="./resources/standards.pdf">Standards</a> </li>
   			</ul>
 
  			<h4>Contact Info</h4>
