updated course websites

--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -56,6 +56,7 @@
 			    <h3>Week 1 assignments</h3>
 			    <ul>
 			    	<li> <a href="./dailyprep/34DP.02.16.21.pdf">2/16 daily prep</a> </li>
+			    	<li> <a href="./dailyprep/34DP.02.18.21.pdf">2/18 daily prep</a> </li>
 				    <li> <a href="./resources/whyreadmath.pdf">How to read a math book</a> </li>
 				    <li> <a href="./resources/groupwork.pdf">Group Work</a> </li>
 				    <li> Your first reflection is due 2/19 and it can just be your answers to the group work and reading a math book reflections </li>
@@ -105,8 +106,10 @@
 						<td> </td>
 						<td> 18 Feb. </td>
 						<td> 9.5, 9.6 </td>
-						<td> </td>
-						<td> </td>
+						<td> <a href="./dailyprep/34DP.02.18.21.pdf">Daily Prep</a> </td>
+						<td> 
+							<a href="https://youtu.be/yWyC1SwpTrs">9.5</a>, 
+							<a href="https://youtu.be/01AYoaGCRVs">9.6</a></td>
 						<td> </td>
 					</tr>
 					<tr>
