--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -117,8 +117,9 @@
 						<td> 3 </td>
 						<td> 23 Feb. </td>
 						<td> 9.7, 9.8 </td>
-						<td> </td>
-						<td> </td>
+						<td> <a href="./dailyprep/34DP.02.23.21.pdf">Daily Prep</a> </td>
+						<td> <a href="https://youtu.be/-J0XHyJmpUA">9.7</a>, 
+							<a href="https://youtu.be/nmj-0tavw3A">9.8</a> </td>
 						<td> </td>
 					</tr>
 					<tr>
