updated course websites

--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -31,7 +31,6 @@
   			<ul>
   				<li> <a href="./resources/syllabus.pdf">Syllabus</a> </li>
   				<li> <a href="https://activecalculus.org/vector/frontmatter.html">Actice Calculus</a> </li>
-  				<li> <a href="https://webwork.swarthmore.edu/webwork2/VanMeter-M34-S21">Webwork</a> </li>
   				<li> <a href="https://www.gradescope.com/">Gradescope</a> </li>
   				<li> <a href="./resources/reflections.pdf">Reflections</a> </li>
   				<li> <a href="https://c3d.libretexts.org/CalcPlot3D/index.html">CalcPlot3D</a> </li>
@@ -126,8 +125,9 @@
 						<td> </td>
 						<td> 25 Feb. </td>
 						<td> 10.1, 10.2 </td>
-						<td> </td>
-						<td> </td>
+						<td> <a href="./dailyprep/34DP.02.25.21.pdf">Daily Prep</a></td>
+						<td> <a href="https://youtu.be/ndU_RK2GYRA">10.1</a>, 
+							<a href="https://youtu.be/zx0IGg3SpAE">10.2 </a> </td>
 						<td> </td>
 					</tr>
 					<tr>
