updated course websites

--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -53,15 +53,25 @@
 			<section id="welcome">
 			    <h2>Welcome!</h2>
 
-			    <h3>Week 1 assignments</h3>
+			    <h3>Week 2 assignments</h3>
 			    <ul>
-			    	<li> <a href="./dailyprep/34DP.02.16.21.pdf">2/16 daily prep</a> </li>
-			    	<li> <a href="./dailyprep/34DP.02.18.21.pdf">2/18 daily prep</a> </li>
-				    <li> <a href="./resources/whyreadmath.pdf">How to read a math book</a> </li>
-				    <li> <a href="./resources/groupwork.pdf">Group Work</a> </li>
-				    <li> Your first reflection is due 2/19 and it can just be your answers to the group work and reading a math book reflections </li>
-				    <li> Make a flipgrid video (link on moodle) </li>
+			    	<li> <a href="./dailyprep/34DP.02.23.21.pdf">2/23 daily prep</a> </li>
+			    	<li> <a href="./dailyprep/34DP.02.25.21.pdf">2/25 daily prep</a> </li>
+				    <li> For your reflection this week check out the list of <a href="./resources/reflections.pdf">reflection prompts</a> I wrote. In particular I recommend the first one, learn about evidence based study techniques. </li>
 			    </ul>
+
+			    <details>
+			    	<summary> Previous weeks assignments</summary>
+			    		<h3>Week 1 assignments</h3>
+					    <ul>
+					    	<li> <a href="./dailyprep/34DP.02.16.21.pdf">2/16 daily prep</a> </li>
+					    	<li> <a href="./dailyprep/34DP.02.18.21.pdf">2/18 daily prep</a> </li>
+						    <li> <a href="./resources/whyreadmath.pdf">How to read a math book</a> </li>
+						    <li> <a href="./resources/groupwork.pdf">Group Work</a> </li>
+						    <li> Your first reflection is due 2/19 and it can just be your answers to the group work and reading a math book reflections </li>
+						    <li> Make a flipgrid video (link on moodle) </li>
+					    </ul>
+			    </details>
 	    	</section>
 
 			<section id="calendar">
