updated course websites

--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -144,8 +144,9 @@
 						<td> 4 </td>
 						<td> 2 March </td>
 						<td> 10.3, 10.4 </td>
-						<td> </td>
-						<td> </td>
+						<td> <a href="./dailyprep/34DP.03.02.21.pdf">Daily Prep</a> </td>
+						<td> <a href="https://youtu.be/nFig9hbQZ3U">10.3</a>, 
+							<a href="https://youtu.be/8YBxKp5RN7M">10.4 </a> </td>
 						<td> </td>
 					</tr>
 					<tr>
