updated course websites

--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -147,7 +147,7 @@
 						<td> <a href="./dailyprep/34DP.03.02.21.pdf">Daily Prep</a> </td>
 						<td> <a href="https://youtu.be/nFig9hbQZ3U">10.3</a>, 
 							<a href="https://youtu.be/8YBxKp5RN7M">10.4 </a> </td>
-						<td> </td>
+						<td> <a href="https://youtu.be/H3XsDc6DViA">Rant about Clairaut's theorem</a> </td>
 					</tr>
 					<tr>
 						<td> </td>
