--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -53,8 +53,9 @@
 			<section id="welcome">
 			    <h2>Welcome!</h2>
 
-			    <h3>Week 2 assignments</h3>
+			    <h3>Week 2</h3>
 			    <ul>
+			    	<li> <a href="./hwsolutions/hw1solutions.pdf">Week 1 solutions</a>
 			    	<li> <a href="./dailyprep/34DP.02.23.21.pdf">2/23 daily prep</a> </li>
 			    	<li> <a href="./dailyprep/34DP.02.25.21.pdf">2/25 daily prep</a> </li>
 				    <li> For your reflection this week check out the list of <a href="./resources/reflections.pdf">reflection prompts</a> I wrote. In particular I recommend the first one, learn about evidence based study techniques. </li>
@@ -153,7 +154,7 @@
 						<td> </td>
 						<td> 4 March </td>
 						<td> 10.4, 10.5 </td>
-						<td> </td>
+						<td> <a href="./dailyprep/34DP.03.02.21.pdf">Daily Prep</a>, <a href="./resources/Colley-Derivative.pdf">Extra chapter</a> </td>
 						<td> </td>
 						<td> </td>
 					</tr>
