small udpates to class webpages

--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -130,7 +130,7 @@
 						<td> <a href="./dailyprep/34DP.02.23.21.pdf">Daily Prep</a> </td>
 						<td> <a href="https://youtu.be/-J0XHyJmpUA">9.7</a>, 
 							<a href="https://youtu.be/nmj-0tavw3A">9.8</a> </td>
-						<td> </td>
+						<td> Bonus question: <a href="./bonusproblems/necurve.pdf">NE curve</a> </td>
 					</tr>
 					<tr>
 						<td> </td>
@@ -154,8 +154,9 @@
 						<td> </td>
 						<td> 4 March </td>
 						<td> 10.4, 10.5 </td>
-						<td> <a href="./dailyprep/34DP.03.02.21.pdf">Daily Prep</a>, <a href="./resources/Colley-Derivative.pdf">Extra chapter</a> </td>
-						<td> </td>
+						<td> <a href="./dailyprep/34DP.03.04.21.pdf">Daily Prep</a>, <a href="./resources/Colley-derivative.pdf">10.4 extra</a>, <a href="./resources/Colley-chain.pdf">10.5 extra</a> </td>
+						<td> <a href="https://youtu.be/Bi0m_Q_SflY">10.4 extra</a>, <a href="https://youtu.be/jznjxA7qK60">10.5</a>, 
+							<a href="https://youtu.be/Qy3PZiPqw24">10.5 extra </a> </td>
 						<td> </td>
 					</tr>
 					<tr>
