--- a/classes/math3/index.html
+++ b/classes/math3/index.html
@@ -52,6 +52,7 @@
 				    <li> Read sections 3.1, 3.2, 3.3 of The Heart of Mathematics </li>
 				    <li> Watch these two videos: <a href="http://vihart.com/proof-some-infinities-are-bigger-than-other-infinities/"> Vi Hart on infinty</a>, and <a href="https://www.youtube.com/watch?v=A-QoutHCu4o">Quick summary</a>   </li>
 				    <li> Optional videos: <a href="https://www.youtube.com/watch?v=elvOZm0d4H0"> Numberphile on infinity</a>, and <a href="https://www.youtube.com/watch?v=dDl7g_2x74Q">infinity paradoxes</a>  </li>
+				    <li> <a href="./resources/week2.pdf"> Discussing infinity with a friend </a>  </li>
 			    </ul>
 			    <details>
 			    	<summary> Previous weeks assignmnets</summary>
