--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -53,16 +53,25 @@
 			<section id="welcome">
 			    <h2>Welcome!</h2>
 
-			    <h3>Week 2</h3>
+			    <h3>Week 3</h3>
 			    <ul>
-			    	<li> <a href="./hwsolutions/hw1solutions.pdf">Week 1 solutions</a>
-			    	<li> <a href="./dailyprep/34DP.02.23.21.pdf">2/23 daily prep</a> </li>
-			    	<li> <a href="./dailyprep/34DP.02.25.21.pdf">2/25 daily prep</a> </li>
-				    <li> For your reflection this week check out the list of <a href="./resources/reflections.pdf">reflection prompts</a> I wrote. In particular I recommend the first one, learn about evidence based study techniques. </li>
+			    	<li> <p> Homework solutions on google drive (via moodle) </p>
+			    	<li> <a href="./dailyprep/34DP.03.02.21.pdf">3/2 daily prep</a> </li>
+			    	<li> <a href="./dailyprep/34DP.03.04.21.pdf">3/4 daily prep</a> </li>
+				    <li> For a reflection this week you might write a reflection comparing the two books we look at in the reading. For other ideas check out the list of <a href="./resources/reflections.pdf">reflection prompts</a> I wrote. </li>
 			    </ul>
 
 			    <details>
 			    	<summary> Previous weeks assignments</summary>
+
+			    		<h3>Week 2</h3>
+					    <ul>
+					    	<li> <a href="./hwsolutions/hw1solutions.pdf">Week 1 solutions</a>
+					    	<li> <a href="./dailyprep/34DP.02.23.21.pdf">2/23 daily prep</a> </li>
+					    	<li> <a href="./dailyprep/34DP.02.25.21.pdf">2/25 daily prep</a> </li>
+						    <li> For your reflection this week check out the list of <a href="./resources/reflections.pdf">reflection prompts</a> I wrote. In particular I recommend the first one, learn about evidence based study techniques. </li>
+					    </ul>
+
 			    		<h3>Week 1 assignments</h3>
 					    <ul>
 					    	<li> <a href="./dailyprep/34DP.02.16.21.pdf">2/16 daily prep</a> </li>
