small udpates to class webpages

--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -55,7 +55,8 @@
 
 			    <h3>Week 3</h3>
 			    <ul>
-			    	<li> <p> Homework solutions on google drive (via moodle) </p>
+			    	<li> <a href="./resources/checkpoint1.pdf">Checkpoint 1</a> </li>
+			    	<li> Homework solutions on google drive (via moodle) </li>
 			    	<li> <a href="./dailyprep/34DP.03.02.21.pdf">3/2 daily prep</a> </li>
 			    	<li> <a href="./dailyprep/34DP.03.04.21.pdf">3/4 daily prep</a> </li>
 				    <li> For a reflection this week you might write a reflection comparing the two books we look at in the reading. For other ideas check out the list of <a href="./resources/reflections.pdf">reflection prompts</a> I wrote. </li>
