small udpates to class webpages

--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -173,8 +173,8 @@
 						<td> 5 </td>
 						<td> 9 March </td>
 						<td> 10.6 </td>
-						<td> </td>
-						<td> </td>
+						<td> <a href="./dailyprep/34DP.03.09.21.pdf">Daily Prep</a> </td>
+						<td> <a href="https://youtu.be/WPa60m8VFzc">10.6</a>  </td>
 						<td> </td>
 					</tr>
 					<tr>
