--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -181,8 +181,8 @@
 						<td> </td>
 						<td> 11 March </td>
 						<td> 10.7 </td>
-						<td> </td>
-						<td> </td>
+						<td> <a href="./dailyprep/34DP.03.11.21.pdf">Daily Prep</a> </td>
+						<td> <a href="https://youtu.be/xpN4QnQwItU">10.7</a> , <a href="https://youtu.be/9yxwZ892urI">The Hessian</a> </td>
 						<td> </td>
 					</tr>
 					<tr>
