--- a/classes/math34/index.html
+++ b/classes/math34/index.html
@@ -53,17 +53,27 @@
 			<section id="welcome">
 			    <h2>Welcome!</h2>
 
-			    <h3>Week 3</h3>
+			    <h3>Week 4</h3>
 			    <ul>
-			    	<li> <a href="./resources/checkpoint1.pdf">Checkpoint 1</a> </li>
-			    	<li> Homework solutions on google drive (via moodle) </li>
-			    	<li> <a href="./dailyprep/34DP.03.02.21.pdf">3/2 daily prep</a> </li>
-			    	<li> <a href="./dailyprep/34DP.03.04.21.pdf">3/4 daily prep</a> </li>
-				    <li> For a reflection this week you might write a reflection comparing the two books we look at in the reading. For other ideas check out the list of <a href="./resources/reflections.pdf">reflection prompts</a> I wrote. </li>
+			    	<li> Please answer the week 4 check-in (I swear it's short) </li>
+			    	<li> Reminder: Homework solutions on google drive (via moodle) </li>
+			    	<li> <a href="./dailyprep/34DP.03.09.21.pdf">3/9 daily prep</a> </li>
+			    	<li> <a href="./dailyprep/34DP.03.11.21.pdf">3/11 daily prep</a> </li>
+			    	<li> After reading 10.7 watch <a href=".https://youtu.be/9yxwZ892urI">this video about the second derivative test</a> </li>
+				    <li> My recomendation for a reflection this week is to think about growth mindset again. Khan academy has a great mini-course if you are looking for prompts (linked to in reflection list). For other ideas check out the list of <a href="./resources/reflections.pdf">reflection prompts</a> I wrote. </li>
 			    </ul>
 
 			    <details>
 			    	<summary> Previous weeks assignments</summary>
+
+			    		<h3>Week 3</h3>
+					    <ul>
+					    	<li> <a href="./resources/checkpoint1.pdf">Checkpoint 1</a> </li>
+					    	<li> Homework solutions on google drive (via moodle) </li>
+					    	<li> <a href="./dailyprep/34DP.03.02.21.pdf">3/2 daily prep</a> </li>
+					    	<li> <a href="./dailyprep/34DP.03.04.21.pdf">3/4 daily prep</a> </li>
+						    <li> For a reflection this week you might write a reflection comparing the two books we look at in the reading. For other ideas check out the list of <a href="./resources/reflections.pdf">reflection prompts</a> I wrote. </li>
+					    </ul>
 
 			    		<h3>Week 2</h3>
 					    <ul>
